fixed education page so everything is visible

--- a/MyWebsite.css
+++ b/MyWebsite.css
@@ -63,8 +63,7 @@ a {
 #linkedin {
   background-color: #faedf0;
   padding: 5px 10px;
-
-  border-radius: 10px;
+  border-radius: 180px;
   border: 1px solid #2a2a2a;
   color: #2a2a2a;
 }
@@ -85,7 +84,7 @@ h1 {
 }
 
 img {
-  border-radius: 10px;
+  border-radius: 180px;
   height: 250px;
   width: 250px;
 }
@@ -112,7 +111,18 @@ img {
 .edu_content {
   position: relative;
   padding: 16px;
-  top: 125px;
+  top: 25px;
+  padding: 20px;
+  border-radius: 10px;
+  text-align: justify;
+  height: 100px;
+  min-width: 300px;
+}
+
+.a_level_content {
+  position: relative;
+  padding: 16px;
+  top: 300px;
   padding: 20px;
   border-radius: 10px;
   text-align: justify;
@@ -124,6 +134,17 @@ img {
   flex: 1;
   padding: 20px;
   background-color: #fffdff;
+  text-align: justify;
+  height: 250px;
+  width: 300px;
+  border-radius: 90px;
+}
+
+.workcontent {
+  position: relative;
+  padding: 16px;
+  top: 25px;
+  padding: 20px;
   border-radius: 10px;
   text-align: justify;
   height: 100px;
@@ -134,9 +155,20 @@ p {
   background-color: #fffdff;
   color: #2a2a2a;
   padding: 0.75rem;
+  white-space: normal;
 }
 
 h2 {
+  color: #2a2a2a;
+  background-color: #fffdff;
+  padding: 0.5rem;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-weight: 100;
+  border-radius: 10px;
+  width: auto;
+}
+
+h3 {
   color: #2a2a2a;
   background-color: #fffdff;
   padding: 0.5rem;
@@ -152,12 +184,36 @@ h2 {
   padding: 20px;
   border-radius: 10px;
   text-align: justify;
-  height: 75px;
+  height: 275px;
   min-width: 300px;
   width: 100%;
   background-color: #fffdff;
 }
 
+ul {
+  list-style-position: inside;
+}
+
 li {
+  background-color: #fffdff;
+  padding: 15px;
+  text-align: left;
+}
+
+table {
+  border: solid 1px #2a2a2a;
+  border-collapse: collapse;
+  width: 100%;
+  text-align: center;
+}
+
+th {
+  height: 50px;
+  padding: 10px;
+  background-color: #d0abab;
+}
+
+td {
+  padding: 10px;
   background-color: #fffdff;
 }
